@@ -6,6 +6,7 @@ DEFAULT:
   CHEM_COMP_REPO_PATH: MOCK_CHEM_COMP_REPO
   PDBX_REPO_PATH: MOCK_PDBX_SANDBOX
   DICT_METHOD_HELPER_MODULE: rcsb.utils.config.ExampleHelper  # this is a helper method
+#
 Section1:
   # this is section 1
   BIRD_REPO_PATH: MOCK_BIRD_REPO
@@ -15,3 +16,7 @@ Section1:
   PDBX_REPO_PATH: MOCK_PDBX_SANDBOX
   DICT_METHOD_HELPER_MODULE: rcsb.utils.config.ExampleHelper # this is another helper method
   ENV_OPTION_A: TEST_ENV_VAR
+  CONFIG_SUPPORT_TOKEN: CONFIG_SUPPORT_TOKEN_ENV
+  SECRET_TEST_USERNAME: /QtKzWZfOPukQZ6/XSwb6Ahp28Bj94XONIKc2bYTdgAYYPTadTKSZY7tXfa1zZb9
+  SECRET_TEST_PASSWORD: ZQcr15qf/5sH189l3gUNfExPk8Ha95DunGsKNEMedAG+5DJgl48nn3cr+aSGOmcjeiJZlvk5coY=
+#
