@@ -1,3 +1,4 @@
 future
 configparser; python_version < "3.0"
 ruamel.yaml
+PyNaCl >= 1.3.0
